CPU-blinkLed/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:21:27 **** Incremental Build of configuration Nios II for project blinkLed ****
wsl make all 
Info: Building /mnt/c/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed_bsp/
make --no-print-directory -C /mnt/c/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed_bsp/
[BSP build complete]
Info: Linking blinkLed.elf
nios2-elf-g++.exe  -T'C:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed_bsp/linker.x' -msys-crt0='C:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed_bsp/obj/HAL/src/crt0.o' -msys-lib=hal_bsp -LC:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed_bsp/   -Wl,-Map=blinkLed.map   -O0 -g -Wall   -mno-hw-div -mhw-mul -mno-hw-mulx -mgpopt=global  -o blinkLed.elf obj/default/hello_world.o -lm -msys-lib=m
c:/intelfpga_lite/19.1/nios2eds/bin/gnu/h-x86_64-mingw32/bin/../lib/gcc/nios2-elf/8.3.1/../../../../../H-x86_64-mingw32/nios2-elf/bin/ld.exe: C:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed_bsp/\libhal_bsp.a(alt_sys_init.o): in function `alt_sys_init':
C:\Users\jeff7\Documents\GitHub\FPGA\CPU-blinkLed\software\blinkLed_bsp/alt_sys_init.c:92: warning: Error: Interrupt not connected for JTAG_UART. You have selected the interrupt driven version of the ALTERA Avalon JTAG UART driver, but the interrupt is not connected for this device. You can select a polled mode driver by checking the 'small driver' option in the HAL configuration window, or by using the -DALTERA_AVALON_JTAG_UART_SMALL preprocessor flag.
c:/intelfpga_lite/19.1/nios2eds/bin/gnu/h-x86_64-mingw32/bin/../lib/gcc/nios2-elf/8.3.1/../../../../../H-x86_64-mingw32/nios2-elf/bin/ld.exe: address 0xef34 of blinkLed.elf section `.rwdata' is not within region `onchip_memory2'
c:/intelfpga_lite/19.1/nios2eds/bin/gnu/h-x86_64-mingw32/bin/../lib/gcc/nios2-elf/8.3.1/../../../../../H-x86_64-mingw32/nios2-elf/bin/ld.exe: address 0x10af4 of blinkLed.elf section `.bss' is not within region `onchip_memory2'
c:/intelfpga_lite/19.1/nios2eds/bin/gnu/h-x86_64-mingw32/bin/../lib/gcc/nios2-elf/8.3.1/../../../../../H-x86_64-mingw32/nios2-elf/bin/ld.exe: address 0xef34 of blinkLed.elf section `.rwdata' is not within region `onchip_memory2'
c:/intelfpga_lite/19.1/nios2eds/bin/gnu/h-x86_64-mingw32/bin/../lib/gcc/nios2-elf/8.3.1/../../../../../H-x86_64-mingw32/nios2-elf/bin/ld.exe: address 0x10af4 of blinkLed.elf section `.bss' is not within region `onchip_memory2'
c:/intelfpga_lite/19.1/nios2eds/bin/gnu/h-x86_64-mingw32/bin/../lib/gcc/nios2-elf/8.3.1/../../../../../H-x86_64-mingw32/nios2-elf/bin/ld.exe: C:\Users\jeff7\Documents\GitHub\FPGA\CPU-blinkLed\software\blinkLed_bsp/alt_sys_init.c:92: undefined reference to `__alt_invalid'
collect2.exe: error: ld returned 1 exit status
make: *** [Makefile:1011: blinkLed.elf] Error 1
14:26:25 **** Build of configuration Nios II for project blinkLed2 ****
wsl make all 
Info: Building /mnt/c/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/
make --no-print-directory -C /mnt/c/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/
[BSP build complete]
[blinkLed2 build complete]
14:26:30 **** Incremental Build of configuration Nios II for project blinkLed2 ****
wsl make all 
Info: Building /mnt/c/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/
make --no-print-directory -C /mnt/c/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/
[BSP build complete]
Info: Compiling hello_world_small.c to obj/default/hello_world_small.o
nios2-elf-gcc.exe -xc -MP -MMD -c -IC:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/HAL/inc -IC:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/ -IC:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/drivers/inc  -pipe -D__hal__ -DALT_NO_C_PLUS_PLUS -DALT_NO_CLEAN_EXIT -D'exit(a)=_exit(a)' -DALT_NO_EXIT -DALT_USE_DIRECT_DRIVERS -DALT_NO_INSTRUCTION_EMULATION -DALT_USE_SMALL_DRIVERS -DSMALL_C_LIB -DALT_SINGLE_THREADED    -Os -g -Wall   -mno-hw-div -mhw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/hello_world_small.o hello_world_small.c
Info: Linking blinkLed2.elf
nios2-elf-g++.exe  -T'C:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/linker.x' -msys-crt0='C:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/obj/HAL/src/crt0.o' -msys-lib=hal_bsp -LC:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/  -msmallc  -Wl,-Map=blinkLed2.map   -Os -g -Wall   -mno-hw-div -mhw-mul -mno-hw-mulx -mgpopt=global  -o blinkLed2.elf obj/default/hello_world_small.o -lm -msys-lib=m
nios2-elf-insert.exe blinkLed2.elf --thread_model hal --cpu_name nios2_gen2 --qsys true --simulation_enabled false --stderr_dev jtag_uart --stdin_dev jtag_uart --stdout_dev jtag_uart --sopc_system_name DE0_NANO_SOPC --quartus_project_dir "C:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed" --jdi ../..//output_files/CPU-blinkLed.jdi
Unable to determine program-size.
Info: Creating blinkLed2.objdump
nios2-elf-objdump.exe --disassemble --syms --all-header --source blinkLed2.elf >blinkLed2.objdump
[blinkLed2 build complete]
14:31:32 **** Build of configuration Nios II for project blinkLed2 ****
wsl make all 
Info: Building /mnt/c/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/
make --no-print-directory -C /mnt/c/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/
[BSP build complete]
[blinkLed2 build complete]
14:31:38 **** Incremental Build of configuration Nios II for project blinkLed2 ****
wsl make all 
Info: Building /mnt/c/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/
make --no-print-directory -C /mnt/c/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/
[BSP build complete]
Info: Compiling hello_world_small.c to obj/default/hello_world_small.o
nios2-elf-gcc.exe -xc -MP -MMD -c -IC:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/HAL/inc -IC:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/ -IC:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/drivers/inc  -pipe -D__hal__ -DALT_NO_C_PLUS_PLUS -DALT_NO_CLEAN_EXIT -D'exit(a)=_exit(a)' -DALT_NO_EXIT -DALT_USE_DIRECT_DRIVERS -DALT_NO_INSTRUCTION_EMULATION -DALT_USE_SMALL_DRIVERS -DSMALL_C_LIB -DALT_SINGLE_THREADED    -Os -g -Wall   -mno-hw-div -mhw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/hello_world_small.o hello_world_small.c
hello_world_small.c: In function 'main':
hello_world_small.c:95:12: error: expected ';' before '}' token
    delay ++
            ^
            ;
   }
   ~         
make: *** [Makefile:721: obj/default/hello_world_small.o] Error 1
14:32:28 **** Build of configuration Nios II for project blinkLed2 ****
wsl make all 
Info: Building /mnt/c/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/
make --no-print-directory -C /mnt/c/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/
[BSP build complete]
Info: Compiling hello_world_small.c to obj/default/hello_world_small.o
nios2-elf-gcc.exe -xc -MP -MMD -c -IC:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/HAL/inc -IC:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/ -IC:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/drivers/inc  -pipe -D__hal__ -DALT_NO_C_PLUS_PLUS -DALT_NO_CLEAN_EXIT -D'exit(a)=_exit(a)' -DALT_NO_EXIT -DALT_USE_DIRECT_DRIVERS -DALT_NO_INSTRUCTION_EMULATION -DALT_USE_SMALL_DRIVERS -DSMALL_C_LIB -DALT_SINGLE_THREADED    -Os -g -Wall   -mno-hw-div -mhw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/hello_world_small.o hello_world_small.c
hello_world_small.c: In function 'main':
hello_world_small.c:95:12: error: expected ';' before '}' token
    delay ++
            ^
            ;
   }
   ~         
make: *** [Makefile:721: obj/default/hello_world_small.o] Error 1
14:32:32 **** Incremental Build of configuration Nios II for project blinkLed2 ****
wsl make all 
Info: Building /mnt/c/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/
make --no-print-directory -C /mnt/c/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/
[BSP build complete]
Info: Compiling hello_world_small.c to obj/default/hello_world_small.o
nios2-elf-gcc.exe -xc -MP -MMD -c -IC:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/HAL/inc -IC:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/ -IC:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/drivers/inc  -pipe -D__hal__ -DALT_NO_C_PLUS_PLUS -DALT_NO_CLEAN_EXIT -D'exit(a)=_exit(a)' -DALT_NO_EXIT -DALT_USE_DIRECT_DRIVERS -DALT_NO_INSTRUCTION_EMULATION -DALT_USE_SMALL_DRIVERS -DSMALL_C_LIB -DALT_SINGLE_THREADED    -Os -g -Wall   -mno-hw-div -mhw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/hello_world_small.o hello_world_small.c
Info: Linking blinkLed2.elf
nios2-elf-g++.exe  -T'C:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/linker.x' -msys-crt0='C:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/obj/HAL/src/crt0.o' -msys-lib=hal_bsp -LC:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed/software/blinkLed2_bsp/  -msmallc  -Wl,-Map=blinkLed2.map   -Os -g -Wall   -mno-hw-div -mhw-mul -mno-hw-mulx -mgpopt=global  -o blinkLed2.elf obj/default/hello_world_small.o -lm -msys-lib=m
nios2-elf-insert.exe blinkLed2.elf --thread_model hal --cpu_name nios2_gen2 --qsys true --simulation_enabled false --stderr_dev jtag_uart --stdin_dev jtag_uart --stdout_dev jtag_uart --sopc_system_name DE0_NANO_SOPC --quartus_project_dir "C:/Users/jeff7/Documents/GitHub/FPGA/CPU-blinkLed" --jdi ../..//output_files/CPU-blinkLed.jdi
Unable to determine program-size.
Info: Creating blinkLed2.objdump
nios2-elf-objdump.exe --disassemble --syms --all-header --source blinkLed2.elf >blinkLed2.objdump
[blinkLed2 build complete]
